@startuml diagrama_4_pilares
' Protocol/Interface
interface Notificador << (I,lightblue) Interface >> {
    +enviar(mensaje: String): void
}

' Implementaciones del Protocol / Interface
class NotificadorEmail {
    -destinatario: String
    -servidor_smtp: String
    +__init__(destinatario: String, servidor: String)
    +enviar(mensaje: String): void
    +validar_email(): boolean
}

class NotificadorWebhook {
    -url: String
    -timeout: int
    +__init__(url: String, timeout: int)
    +enviar(mensaje: String): void
    +validar_url(): boolean
}

class NotificadorSMS {
    -numero: String
    -proveedor: String
    +__init__(numero: String, proveedor: String)
    +enviar(mensaje: String): void
    +formato_numero(): String
}

' Clase abstracta base para los sensores
abstract class Sensor << (A,Orange) Abstract >> {
    +id: String
    +ventana: int
    #calibracion: float
    #buffer: list[float]
    #ubicacion: String

    +__init__(id: String, ventana: int, ubicacion: String)
    +leer(valor: float): void
    +promedio(): float
    +obtener_estado(): String
    {abstract} +en_alerta(): boolean
    {abstract} +obtener_tipo(): String
}


' HERENCIA: Subclases Concretas
class SensorTemperatura {
    -umbral_max: float
    -umbral_min: float
    -unidad: String

    +__init__(id: String, umbral_max: float, umbral_min: float)
    +en_alerta(): boolean
    +obtener_tipo(): String
    +celsius_to_fahrenheit(): float
}

class SensorVibracion {
    -rms_umbral: float
    -frecuencia: int

    +__init__(id: String, rms_umbral: float, frecuencia: int)
    +en_alerta(): boolean
    +obtener_tipo(): String
    +calcular_rms(): float
}

class SensorHumedad{
    -umbral_humedad: float
    -tipo_ambiente: String

    +__init__(id: String, umbral: float, ambiente: String)
    +en_alerta(): boolean
    +obtener_tipo(): String
    +calcular_punto_rocio(): float
}


' Composición - GestorAlertas contiene sensores y notificadores
class GestorAlertas {
    -sensores: list[Sensor]
    -notificadores: list[Notificador]
    -configuracion: ConfiguracionSistema
    -log_alertas: list[RegistroAlerta]

    +__init__(configuracion: ConfiguracionSistema)
    +agregar_sensor(sensor: Sensor): void
    +agregar_notificador(notificador: Notificador): void
    +evaluar_y_notificar(): void
    +generar_reporte(): String
    +limpiar_historico(): void
    +sensores(): list[Sensor]
}

' Agregación - Sistema tiene GestorAlertas
class SistemaMonitoreo {
    -nombre: String
    -version: String
    -gestor_alertas: GestorAlertas
    -panel_control: PanelDeControl
    
    +__init__(nombre: String, version: String)
    +inicializar(): void
    +detener(): void
    +obtener_estado_general(): String
    +gestor_alertas(): GestorAlertas
    +panel_control(): PanelDeControl
}

' Clase de configuración
class ConfiguracionSistema {
    +intervalo_verificacion: int
    +max_alertas_por_hora: int
    +nivel_log: String
    +ruta_logs: String

    +cargar_configuracion(archivo: String): void
    +guardar_configuracion(): void
    +validar_configuracion(): boolean
}

' Clase para registros
class RegistroAlerta{
    +timestamp: DateTime
    +sensor_id: String
    +mensaje: String
    +nivel: String
    +valor_medido: float

    +__init__(sensor_id: String, mensaje: String, nivel: String, valor: float)
    +to_json(): String
    +to_csv(): String
}

' Clase para interfaz de usuario
class PanelDeControl{
    -sistema: SistemaMonitoreo
    -interfaz_activa: boolean

    +__init__(sistema: SistemaMonitoreo)
    +limpiar_pantalla(): void
    +mostrar_dashboard(): void
    +mostrar_menu_principal(): void
    +procesar_comandos(): boolean
    +mostrar_estado_sistema(): void
    +generar_reporte_completo(): void
    +simular_lecturas(): void
    +evaluar_alertas(): void
    +configurar_sistema(): void
    +limpiar_historico(): void
    +gestionar_notificadores(): void
    +gestionar_sensores(): void
    +actualizar_interfaz(): void
}

' Factory para crear sensores
class SensorFactory{
    +crear_sensor_temperatura(id: String, umbral: float): SensorTemperatura
    +crear_sensor_vibracion(id: String, rms: float): SensorVibracion
    +crear_sensor_humedad(id: String, umbral: float): SensorHumedad
}

' ==================== FUNCIÓN DE CONFIGURACIÓN ====================
class ConfiguradorSistema << (F,lightgreen) Function >> {
    +configurar_sistema_inicial(sistema: SistemaMonitoreo): void
}

' -----------------------RELACIONES----------------------
' Herencia (Generalización)
Sensor <|-- SensorTemperatura : extends
Sensor <|-- SensorVibracion : extends
Sensor <|-- SensorHumedad : extends

' Implementacion
Notificador <|.. NotificadorEmail : implements
Notificador <|.. NotificadorSMS : implements
Notificador <|.. NotificadorWebhook : implements

' Composición (rombo negro) - GestorAlertas CONTIENE sensores y notificadores
GestorAlertas *-- Sensor : contains
GestorAlertas *-- Notificador : contains
GestorAlertas *-- ConfiguracionSistema : contains
GestorAlertas *-- RegistroAlerta : contains

' Agregación (rombo blanco) - SistemaMonitoreo TIENE GestorAlertas
SistemaMonitoreo "1" o-- "1" GestorAlertas : has
SistemaMonitoreo "1" o-- "1" PanelDeControl : has

' Asociación - PanelDeControl conoce a SistemaMonitoreo
PanelDeControl --> SistemaMonitoreo : uses

' Dependencia (flecha punteada) - SensorFactory crea sensores
SensorFactory "1" ..> "0..*" SensorTemperatura : creates
SensorFactory "1" ..> "0..*" SensorVibracion : creates
SensorFactory "1" ..> "0..*" SensorHumedad : creates
ConfiguradorSistema "1" ..> "0..*" SistemaMonitoreo : configures
ConfiguradorSistema "1" ..> "0..*" SensorFactory : uses

' ==================== NOTAS EXPLICATIVAS ====================
note right of Sensor : 🎨 ABSTRACCIÓN:\nClase abstracta que define\nla interfaz común para\ntodos los sensores

note bottom of SensorTemperatura : 🧬 HERENCIA + 🎭 POLIMORFISMO:\nHereda de Sensor e implementa\nsu propia versión de en_alerta()

note left of GestorAlertas : 🏗️ COMPOSICIÓN:\nContiene y gestiona sensores,\nnotificadores y configuración.\nSi se destruye, sus partes\ntambién se destruyen.

note top of SistemaMonitoreo : 🤝 AGREGACIÓN:\nTiene un GestorAlertas y\nPanelDeControl, pero pueden\nexistir independientemente.

note right of NotificadorEmail : 🔒 ENCAPSULACIÓN:\nAtributos privados (_destinatario)\nprotegidos del acceso externo\ndirecto.

note bottom of PanelDeControl : 👋 ASOCIACIÓN:\nConoce y usa SistemaMonitoreo\npero no lo posee. Relación\nde colaboración.

note left of SensorFactory : 📦 DEPENDENCIA:\nCrea instancias de sensores.\nDepende de las clases de\nsensores para funcionar.

' ==================== COLORES PARA MEJOR VISUALIZACIÓN ====================
skinparam class {
    BackgroundColor<<Interface>> LightBlue
    BackgroundColor<<Abstract>> LightYellow
    BackgroundColor<<Function>> LightGreen
    BorderColor<<Interface>> Blue
    BorderColor<<Abstract>> Orange
}

' ==================== LEYENDA ====================
legend bottom left
    🎨 **4 PILARES OOP IMPLEMENTADOS:**
    • 🔒 **Encapsulación**: Atributos privados con _
    • 🧬 **Herencia**: Sensor → SensorTemperatura/Vibracion/Humedad  
    • 🎭 **Polimorfismo**: Diferentes implementaciones de métodos
    • 🎨 **Abstracción**: Clases abstractas y protocolos
    
    **RELACIONES UML:**
    • ——▷ Herencia/Generalización
    • ⋯▷ Implementación de Interface
    • ——♦ Composición (contiene/posee)
    • ——◇ Agregación (tiene/usa)
    • ——→ Asociación (conoce/colabora)  
    • ⋯→ Dependencia (usa temporalmente)
end legend

@enduml